<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.camarasa.robin.nutritivecoach.Activities.Activities.Inscription.Inscription_2_0_activity">

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/weight"
        android:textColor="@color/colorSurvey"
        android:textSize="@dimen/survey_question"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewAllergies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textColor="@color/colorSurvey"
        android:textSize="@dimen/survey_question"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextOld"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextOld" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="54dp"
        app:srcCompat="@mipmap/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@color/colorSurvey"
        android:textSize="@dimen/survey_question"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextSize"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextSize" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:onClick="previous"
        android:text="@string/previous"
        android:textColor="@color/colorWrite"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextAge" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:background="@drawable/buttons"
        android:onClick="next"
        android:text="@string/next"
        android:textColor="@color/colorWrite"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonPrevious"
        app:layout_constraintLeft_toRightOf="@+id/buttonPrevious" />

    <EditText
        android:id="@+id/editTextOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_weight"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/textViewWeight"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />

    <EditText
        android:id="@+id/editTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_size"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/textViewAllergies"
        app:layout_constraintTop_toBottomOf="@+id/textViewAllergies" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_age"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/textViewAge"
        app:layout_constraintTop_toBottomOf="@+id/textViewAge" />

</android.support.constraint.ConstraintLayout>
