<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.camarasa.robin.nutritivecoach.Activities.Activities.Welcome.LogInActivity">

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="125dp"
        android:layout_height="54dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/buttons"
        android:textColor="@color/colorWrite"
        android:onClick="logIn"
        android:text="@string/log_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttonSubscribe"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:onClick="subscribe"
        android:textColor="@color/colorWrite"
        android:text="@string/subscribe"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonLogIn"
        app:layout_constraintLeft_toRightOf="@+id/buttonLogIn"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pseudo"
        android:textSize="@dimen/survey_question"
        android:textColor="@color/colorSurvey"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/textViewAllergies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textSize="@dimen/survey_question"
        android:textColor="@color/colorSurvey"
        app:layout_constraintLeft_toLeftOf="@+id/editTextWeight"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeight" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_pseudo"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/textViewWeight"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/textViewAllergies"
        app:layout_constraintTop_toBottomOf="@+id/textViewAllergies" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="54dp"
        app:srcCompat="@mipmap/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewtest"
        android:textColor="@color/error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />
</android.support.constraint.ConstraintLayout>
