<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.camarasa.robin.nutritivecoach.Activities.Activities.Inscription.Inscription_1_0_activity">
    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/pseudo"
        android:textSize="@dimen/survey_question"
        android:textColor="@color/colorSurvey"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginLeft="0dp" />

    <TextView
        android:id="@+id/textViewAllergies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textSize="@dimen/survey_question"
        android:textColor="@color/colorSurvey"
        app:layout_constraintLeft_toLeftOf="@+id/editTextWeight"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeight" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_pseudo"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/textViewWeight"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/textViewAllergies"
        app:layout_constraintTop_toBottomOf="@+id/textViewAllergies" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="54dp"
        app:srcCompat="@mipmap/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/survey_question"
        android:textColor="@color/colorSurvey"
        android:text="@string/password_confirmation"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/textViewAge"
        app:layout_constraintTop_toBottomOf="@+id/textViewAge" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttons"
        android:onClick="previous"
        android:text="@string/previous"
        android:textColor="@color/colorWrite"
        app:layout_constraintLeft_toLeftOf="@+id/editTextConfirmation"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmation" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:background="@drawable/buttons"
        android:onClick="next"
        android:text="@string/next"
        android:textColor="@color/colorWrite"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonPrevious"
        app:layout_constraintLeft_toRightOf="@+id/buttonPrevious" />

    <TextView
        android:id="@+id/textViewError"
        android:textColor="@color/error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:text=""
        app:layout_constraintLeft_toLeftOf="@+id/buttonPrevious"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonPrevious" />
</android.support.constraint.ConstraintLayout>
