<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.camarasa.robin.nutritivecoach.Activities.Activities.Settings.SetPassword">

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/old_password"
        android:textColor="@color/colorSurvey"
        android:textSize="@dimen/survey_question"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewAllergies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_password"
        android:textColor="@color/colorSurvey"
        android:textSize="@dimen/survey_question"
        app:layout_constraintLeft_toLeftOf="@+id/editTextWeight"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeight" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_old_pasword"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/textViewWeight"
        app:layout_constraintTop_toBottomOf="@+id/textViewWeight" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/textViewAllergies"
        app:layout_constraintTop_toBottomOf="@+id/textViewAllergies" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="54dp"
        app:srcCompat="@mipmap/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/survey_question"
        android:textColor="@color/colorSurvey"
        android:text="@string/password_confirmation"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/textViewAge"
        app:layout_constraintTop_toBottomOf="@+id/textViewAge" /><ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="54dp"
        app:srcCompat="@mipmap/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />



    <Button
        android:id="@+id/buttonYourStatistics"
        android:layout_width="181dp"
        android:layout_height="54dp"
        android:background="@drawable/buttons"
        android:onClick="settings"
        android:text="@string/change_password"
        android:textColor="@color/colorWrite"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextConfirmation"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        android:layout_marginTop="10dp" />



    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@mipmap/home"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
