<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.camarasa.robin.nutritivecoach.Activities.Activities.Inscription.Inscription_3_0_activity">

    <TextView
        android:id="@+id/textViewObjectif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/weight_oblectif"
        android:textColor="@color/colorSurvey"
        android:textSize="@dimen/survey_question"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="54dp"
        app:srcCompat="@mipmap/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:onClick="previous"
        android:text="@string/previous"
        android:textColor="@color/colorWrite"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextOld"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextOld" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:background="@drawable/buttons"
        android:onClick="next"
        android:text="@string/next"
        android:textColor="@color/colorWrite"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonPrevious"
        app:layout_constraintLeft_toRightOf="@+id/buttonPrevious"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/editTextOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_weight"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/textViewObjectif"
        app:layout_constraintTop_toBottomOf="@+id/textViewObjectif" />

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPrevious" />

</android.support.constraint.ConstraintLayout>