<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.camarasa.robin.nutritivecoach.Activities.Activities.Inscription.Inscription_3_0_activity">

    <TextView
        android:id="@+id/textViewObjectif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objectif"
        android:textColor="@color/colorSurvey"
        android:textSize="@dimen/survey_question"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="54dp"
        app:srcCompat="@mipmap/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:onClick="previous"
        android:text="@string/previous"
        android:textColor="@color/colorWrite"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/spinnerObjectif"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerObjectif" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:background="@drawable/buttons"
        android:onClick="next"
        android:text="@string/next"
        android:textColor="@color/colorWrite"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonPrevious"
        app:layout_constraintLeft_toRightOf="@+id/buttonPrevious"
        android:layout_marginStart="16dp" />

    <Spinner
        android:id="@+id/spinnerObjectif"
        android:layout_width="275dp"
        android:layout_height="27dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewObjectif"
        app:layout_constraintTop_toBottomOf="@+id/textViewObjectif" />

</android.support.constraint.ConstraintLayout>
