<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.camarasa.robin.nutritivecoach.Activities.Activities.Settings.SetObjectif">

    <TextView
        android:id="@+id/textViewObjectif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/weight_oblectif"
        android:textColor="@color/colorSurvey"
        android:textSize="@dimen/survey_question"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="54dp"
        app:srcCompat="@mipmap/logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editTextOld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_weight"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="@+id/textViewObjectif"
        app:layout_constraintTop_toBottomOf="@+id/textViewObjectif" />

    <Button
        android:id="@+id/buttonSetPassword"
        android:layout_width="286dp"
        android:layout_height="56dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons"
        android:onClick="changeObjectif"
        android:text="@string/change_objecif"
        android:textColor="@color/colorWrite"
        app:layout_constraintLeft_toLeftOf="@+id/editTextOld"
        app:layout_constraintTop_toBottomOf="@+id/editTextOld" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@mipmap/home"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>
